--- a/GCD.cabal
+++ b/GCD.cabal
@@ -13,14 +13,17 @@ build-type:          Simple
 cabal-version:       >=1.10
 extra-source-files:  README.md
 
+source-repository head
+  type:              git
+  location:          git@github.com:frankhjung/haskell-gcd.git
+
 executable gcd
   hs-source-dirs:    app
   main-is:           Main.hs
   default-language:  Haskell2010
   build-depends:     base >= 4.7 && < 5
                    , GCD
-  ghc-options:       -O2
-                     -Wall
+  ghc-options:       -Wall
                      -threaded
 
 library
@@ -28,8 +31,7 @@ library
   exposed-modules:   GCD
   default-language:  Haskell2010
   build-depends:     base >= 4.7 && < 5
-  ghc-options:       -O2
-                     -Wall
+  ghc-options:       -Wall
 
 benchmark benchmark
   hs-source-dirs:    bench
