--- a/GCD.cabal
+++ b/GCD.cabal
@@ -39,6 +39,7 @@ test-suite test
   default-language:  Haskell2010
   type:              exitcode-stdio-1.0
   build-depends:     base >= 4.7 && < 5
+                   , besout == 0.2.0.1
                    , hspec >= 2.5
                    , GCD
   ghc-options:       -Wall
@@ -50,5 +51,6 @@ benchmark benchmark
   default-language:  Haskell2010
   type:              exitcode-stdio-1.0
   build-depends:     base >= 4.7 && < 5
+                   , besout == 0.2.0.1
                    , criterion >= 1.3
                    , GCD
