--- a/stack.yaml
+++ b/stack.yaml
@@ -40,7 +40,12 @@ packages:
 
 # Dependency packages to be pulled from upstream that are not in the resolver
 # (e.g., acme-missiles-0.3)
-# extra-deps: []
+extra-deps:
+- besout-0.2.0.1
+- criterion-1.3.0.0
+- hspec-2.5.5
+
+allow-newer: true
 
 # Override default flag values for local packages and extra-deps
 # flags: {}
