--- a/GCD.cabal
+++ b/GCD.cabal
@@ -21,7 +21,7 @@ executable gcd
   hs-source-dirs:    app
   main-is:           Main.hs
   default-language:  Haskell2010
-  build-depends:     base >= 4.7 && < 5
+  build-depends:     base >= 4.7 && < 5.0
                    , GCD
   ghc-options:       -Wall
                      -threaded
@@ -30,15 +30,15 @@ library
   hs-source-dirs:    src
   exposed-modules:   GCD
   default-language:  Haskell2010
-  build-depends:     base >= 4.7 && < 5
+  build-depends:     base >= 4.7 && < 5.0
   ghc-options:       -Wall
 
 test-suite test
   hs-source-dirs:    test
-  main-is:           Spec.hs
+  main-is:           Test.hs
   default-language:  Haskell2010
   type:              exitcode-stdio-1.0
-  build-depends:     base >= 4.7 && < 5
+  build-depends:     base >= 4.7 && < 5.0
                    , besout == 0.2.0.1
                    , hspec >= 2.5
                    , GCD
@@ -50,7 +50,7 @@ benchmark benchmark
   main-is:           Bench.hs
   default-language:  Haskell2010
   type:              exitcode-stdio-1.0
-  build-depends:     base >= 4.7 && < 5
+  build-depends:     base >= 4.7 && < 5.0
                    , besout == 0.2.0.1
-                   , criterion >= 1.3
+                   , criterion >= 1.3.0 && < 1.4
                    , GCD
