--- a/GCD.cabal
+++ b/GCD.cabal
@@ -1,56 +1,58 @@
-name:                GCD
-version:             0.2.0
-synopsis:            Greatest Common Denominator
-description:         Test versions of Euclid's greatest common denominator algorithm 
-homepage:            https://github.com/frankhjung/gcd#readme
-license:             GPL-3
-license-file:        LICENSE
-author:              Frank H Jung
-maintainer:          frankhjung@linux.com
-copyright:           Copyright © 2017-2018 Frank H Jung
-category:            education
-build-type:          Simple
-cabal-version:       >=1.10
-extra-source-files:  README.md
+name:               GCD
+version:            0.3.0
+synopsis:           Greatest Common Denominator
+description:        Test versions of Euclid's greatest common denominator algorithm
+homepage:           https://github.com/frankhjung/gcd#readme
+license:            GPL-3
+license-file:       LICENSE
+author:             Frank H Jung
+maintainer:         frankhjung@linux.com
+copyright:          Copyright © 2018-2019 Frank H Jung
+category:           education
+build-type:         Simple
+cabal-version:      >=1.10
+extra-source-files: README.md
 
 source-repository head
-  type:              git
-  location:          git@github.com:frankhjung/haskell-gcd.git
+  type:             git
+  location:         git@github.com:frankhjung/haskell-gcd.git
 
 executable gcd
-  hs-source-dirs:    app
-  main-is:           Main.hs
-  default-language:  Haskell2010
-  build-depends:     base >= 4.7 && < 5.0
-                   , GCD
-  ghc-options:       -Wall
-                     -threaded
+  hs-source-dirs:   app
+  main-is:          Main.hs
+  default-language: Haskell2010
+  ghc-options:      -Wall
+                    -threaded
+  other-modules:    Paths_GCD
+  build-depends:    base >= 4.11.1 && < 4.12
+                  , GCD
 
 library
-  hs-source-dirs:    src
-  exposed-modules:   GCD
-  default-language:  Haskell2010
-  build-depends:     base >= 4.7 && < 5.0
-  ghc-options:       -Wall
+  default-language: Haskell2010
+  hs-source-dirs:   src
+  exposed-modules:  GCD
+  ghc-options:      -Wall
+  build-depends:    base >= 4.11.1 && < 4.12
 
 test-suite test
-  hs-source-dirs:    test
-  main-is:           Test.hs
-  default-language:  Haskell2010
-  type:              exitcode-stdio-1.0
-  build-depends:     base >= 4.7 && < 5.0
-                   , besout == 0.2.0.1
-                   , hspec >= 2.5
-                   , GCD
-  ghc-options:       -Wall
-                     -threaded
+  hs-source-dirs:   test
+  main-is:          Test.hs
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  build-depends:    base >= 4.11.1 && < 4.12
+                  , besout == 0.2.0.1
+                  , hspec >= 2.5.6
+                  , GCD
+  ghc-options:      -Wall
+                    -threaded
 
 benchmark benchmark
-  hs-source-dirs:    bench
-  main-is:           Bench.hs
-  default-language:  Haskell2010
-  type:              exitcode-stdio-1.0
-  build-depends:     base >= 4.7 && < 5.0
-                   , besout == 0.2.0.1
-                   , criterion >= 1.3.0 && < 1.4
-                   , GCD
+  hs-source-dirs:   bench
+  main-is:          Bench.hs
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  build-depends:    base >= 4.11.1 && < 4.12
+                  , besout
+                  , criterion >= 1.4.1 && < 1.6
+                  , GCD
+
