--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,33 +1,34 @@
-image:
-  name: haskell:8.4.4
-  entrypoint: [""]
-
-before_script:
-  - apt-get update -qq && apt-get install -y -qq hasktags hlint stylish-haskell
-
 stages:
-  - all
-
-variables:
-  STACK_ROOT: "${CI_PROJECT_DIR}/.stack"
+  - build
+  - deploy
 
 cache:
-  key: gcd-cache
+  key: $CI_COMMIT_REF_NAME
   paths:
     - .stack
     - .stack-work
 
-all:
-  stage: all
+variables:
+  RTSOPTS: "+RTS -N1"
+  STACK_ROOT: "${CI_PROJECT_DIR}/.stack"
+
+build:
+  image:
+    name: frankhjung/haskell:latest
+    entrypoint: [""]
+  stage: build
   script:
-    - make clean setup
-    - make check build
-    - make test
-    - make bench
-    - make doc
-    - make exec
+    - make setup clean all
+
+pages:
+  image: alpine:latest
+  stage: deploy
+  script:
+    - mkdir -p public
+    - cp -pr .stack-work/dist/x86_64-linux/Cabal-*/doc/html/GCD/* public/
   artifacts:
     paths:
-      - .stack-work/benchmark.html
-      - .stack-work/dist
-      - .stack-work/install
+    - public
+  only:
+    refs:
+      - master
