--- a/stack.yaml
+++ b/stack.yaml
@@ -1,9 +1,8 @@
 resolver: lts-13.19
-flags: {}
-allow-newer: true
-packages:
-  - '.'
-extra-deps:
-  - besout-0.2.0.1
 arch: x86_64
 system-ghc: true
+ghc-options:
+  $locals: -Wall -O2 -fhpc
+allow-newer: true
+packages: ['.']
+extra-deps: ['besout-0.2.0.1']
