--- a/gcd.cabal
+++ b/gcd.cabal
@@ -1,5 +1,5 @@
-name:               GCD
-version:            0.4.0
+name:               gcd
+version:            0.5.0
 synopsis:           Greatest Common Denominator
 description:        Test versions of Euclid's greatest common denominator algorithm
 homepage:           https://github.com/frankhjung/gcd#readme
@@ -21,38 +21,33 @@ executable gcd
   hs-source-dirs:   app
   main-is:          Main.hs
   default-language: Haskell2010
-  ghc-options:      -Wall
-                    -threaded
-  other-modules:    Paths_GCD
-  build-depends:    base >= 4.12
-                  , GCD
+  other-modules:    Paths_gcd
+  build-depends:    base
+                  , gcd
 
 library
   hs-source-dirs:   src
   default-language: Haskell2010
-  exposed-modules:  GCD
-  ghc-options:      -Wall
-  build-depends:    base >= 4.12
+  exposed-modules:  Gcd
+  build-depends:    base
 
 test-suite test
   hs-source-dirs:   test
   main-is:          Test.hs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  build-depends:    base >= 4.12
-                  , besout >= 0.2
-                  , hspec >= 2.6.1 && <= 2.7.1
-                  , GCD
-  ghc-options:      -Wall
-                    -threaded
+  build-depends:    base
+                  , besout
+                  , hspec
+                  , gcd
 
 benchmark benchmark
   hs-source-dirs:   bench
   main-is:          Bench.hs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  build-depends:    base >= 4.12
-                  , besout >= 0.2
-                  , criterion >= 1.5.4.0 && <= 1.5.5.0
-                  , GCD
+  build-depends:    base
+                  , besout
+                  , criterion
+                  , gcd
 
