--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -2,13 +2,8 @@ stages:
   - build
   - deploy
 
-cache:
-  key: ${CI_COMMIT_REF_NAME}
-  paths:
-    - .stack
-    - .stack-work
-
 variables:
+  TARGET: gcd
   RTSOPTS: "+RTS -N1"
   STACK_ROOT: "${CI_PROJECT_DIR}/.stack"
 
@@ -21,19 +16,29 @@ build:
   stage: build
   script:
     - make setup clean all
+    - mkdir -p public
+    - cp -pr .stack-work/install/x86_64-linux/lts-*/*/hpc/* public/
+    - cp -pr .stack-work/dist/x86_64-linux/Cabal-*/doc/html/${TARGET}/* public/
+  artifacts:
+    paths:
+      - public
+  cache:
+    key: ${CI_COMMIT_REF_NAME}-${CI_JOB_NAME}
+    paths:
+      - .stack
+      - .stack-work
 
 pages:
   only:
-    - master
+    refs:
+      - master
   image: alpine:latest
   stage: deploy
   script:
-    - mkdir -p public
-    - cp -pr .stack-work/install/x86_64-linux/*/*/hpc/* public/
-    - cp -pr .stack-work/dist/x86_64-linux/Cabal-*/doc/html/gcd/* public/
+    - echo Publishing pages ...
+  dependencies:
+    - build
   artifacts:
     paths:
     - public
-  only:
-    refs:
-      - master
+
