--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -16,11 +16,9 @@ build:
     entrypoint: [""]
   stage: build
   script:
-    - make setup clean check build build test doc exec
-    - mkdir -p public
-    # cp -p .stack-work/benchmark.html public/
-    # cp -fpr $(find .stack-work/install -type d -name hpc) public/
-    - cp -fpr $(find .stack-work/dist -type d -name html) public/
+    - make clean setup check build test bench doc exec
+    - mv $(stack path --local-doc-root)/gcd*/ public/
+    - cp -fp .stack-work/benchmark.html public/
   artifacts:
     paths:
       - public
