--- a/gcd.cabal
+++ b/gcd.cabal
@@ -1,5 +1,5 @@
 name:               gcd
-version:            0.8.0
+version:            0.9.0
 synopsis:           Greatest Common Denominator
 description:        Test versions of Euclid's greatest common denominator algorithm
 homepage:           https://github.com/frankhjung/gcd#readme
@@ -12,6 +12,7 @@ category:           education
 build-type:         Simple
 cabal-version:      >=1.10
 extra-source-files: README.md
+tested-with:        GHC == 8.8.4
 
 source-repository head
   type:             git
@@ -19,34 +20,38 @@ source-repository head
 
 executable          gcd
   hs-source-dirs:   app
+                  , src
   main-is:          Main.hs
   default-language: Haskell2010
-  other-modules:    Paths_gcd
-  build-depends:    base
+  build-depends:    base >= 4.13 && < 4.14
                   , gcd
+  other-modules:    Paths_gcd
+                  , Gcd
 
 library
   hs-source-dirs:   src
   default-language: Haskell2010
   exposed-modules:  Gcd
-  build-depends:    base
+  build-depends:    base >= 4.13 && < 4.14
 
 benchmark           benchmark
   hs-source-dirs:   bench
+                  , src
   main-is:          Bench.hs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  build-depends:    base
-                  , besout
-                  , criterion
+  build-depends:    base >= 4.13 && < 4.14
+                  , criterion >= 1.5 && < 1.6
                   , gcd
+  other-modules:    Gcd
 
 test-suite          test
   hs-source-dirs:   test
+                  , src
   main-is:          Test.hs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  build-depends:    base
-                  , besout
-                  , hspec
+  build-depends:    base >= 4.13 && < 4.14
+                  , hspec >= 2.7 && < 2.8
                   , gcd
+  other-modules:    Gcd
