--- a/.github/workflows/haskell.yml
+++ b/.github/workflows/haskell.yml
@@ -2,10 +2,17 @@
 
 name: haskell gcd
 
+# yamllint disable-line rule:truthy
 on:
   push:
+    branches: ['master', 'feature*']
+    tags-ignore: ['*']
   check_run:
     types: [rerequested, requested_action]
+# yamllint enable
+
+env:
+  STACK_ROOT: ${{ github.workspace }}/.stack
 
 jobs:
 
@@ -18,52 +25,38 @@ jobs:
     steps:
 
       - name: checkout
-        uses: actions/checkout@v1.0.0
-        with:
-          ref: refs/heads/master
-          fetch-depth: 1
+        uses: actions/checkout@v3
 
       - name: cache
-        uses: actions/cache@v2
+        uses: actions/cache@v3
         with:
           path: |
-            .stack/
             .stack-work/
-          key: $GITHUB_REF
-
-      - name: stack
-        run: |
-          stack setup
-          stack update
-          stack path
-          stack query
-          stack ls dependencies
-          cabal check
+            ${{ env.STACK_ROOT }}
+          key: ${{ github.ref }}
 
       - name: build
-        run: stack build --no-test
+        run: stack build --pedantic --no-test
 
       - name: test
         run: stack test
 
-      - name: bench
-        run: stack bench --benchmark-arguments '-o .stack-work/benchmark.html'
-
-      - name: documentation
-        run: stack haddock
-
       - name: exec
         run: stack exec gcd -- 112 12   # expect 4 4
 
-      - name: copy
+      - name: bench
+        run: stack bench --benchmark-arguments '-o .stack-work/benchmark.html'
+
+      - name: haddock
+        if: github.ref == 'refs/heads/master'
         run: |
-          mv $(stack path --local-doc-root)/gcd*/ public/
-          cp -fp .stack-work/benchmark.html public/
+          stack haddock --no-haddock-deps
+          mv $(stack path --local-install-root)/doc/gcd*/ public/
+          mv .stack-work/benchmark.html public/
 
       - name: publish
-        uses: crazy-max/ghaction-github-pages@v0.4.0
-        if: success()
+        if: success() && github.ref == 'refs/heads/master'
+        uses: JamesIves/github-pages-deploy-action@v4
         with:
-          build_dir: public
-        env:
-          GITHUB_TOKEN: ${{ secrets.GH_PAGES_TOKEN }}
+          branch: gh-pages
+          folder: public
