--- a/gcd.cabal
+++ b/gcd.cabal
@@ -1,19 +1,19 @@
-cabal-version:      >=1.10
+cabal-version:      3.0
 
 name:               gcd
-version:            0.9.0
+version:            0.10.0
 synopsis:           Greatest Common Denominator
 description:        Test versions of Euclid's greatest common denominator algorithm
 homepage:           https://github.com/frankhjung/gcd#readme
-license:            GPL-3
-license-file:       LICENSE
 author:             Frank H Jung
 maintainer:         frankhjung@linux.com
-copyright:          Copyright © 2018-2021 Frank H Jung
+copyright:          Copyright © 2018-2023 Frank H Jung
+license:            GPL-3.0-only
+license-file:       LICENSE
 category:           education
 build-type:         Simple
 extra-source-files: README.md
-tested-with:        GHC == 8.8.4
+tested-with:        GHC == 9.0.2
 
 source-repository head
   type:             git
@@ -21,32 +21,39 @@ source-repository head
 
 executable          gcd
   hs-source-dirs:   app
+                  , src
   main-is:          Main.hs
   default-language: Haskell2010
-  build-depends:    base >= 4.13 && < 4.14
+  build-depends:    base >= 4.13 && < 5.0
                   , gcd
   other-modules:    Paths_gcd
+                  , Gcd
+  autogen-modules:  Paths_gcd
 
 library
   hs-source-dirs:   src
   default-language: Haskell2010
   exposed-modules:  Gcd
-  build-depends:    base >= 4.13 && < 4.14
-
-benchmark           benchmark
-  hs-source-dirs:   bench
-  main-is:          Bench.hs
-  default-language: Haskell2010
-  type:             exitcode-stdio-1.0
-  build-depends:    base >= 4.13 && < 4.14
-                  , criterion >= 1.5 && < 1.6
-                  , gcd
+  build-depends:    base
 
 test-suite          test
   hs-source-dirs:   test
+                  , src
   main-is:          Test.hs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  build-depends:    base >= 4.13 && < 4.14
-                  , hspec >= 2.7 && < 2.8
+  build-depends:    base
+                  , hspec >= 2.7 && < 2.9
                   , gcd
+  other-modules:    Gcd
+
+benchmark           benchmark
+  hs-source-dirs:   bench
+                  , src
+  main-is:          Bench.hs
+  default-language: Haskell2010
+  type:             exitcode-stdio-1.0
+  build-depends:    base
+                  , criterion >= 1.5 && < 1.6
+                  , gcd
+  other-modules:    Gcd
