--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,37 +5,35 @@ stages:
   - deploy
 
 variables:
-  RTSOPTS: "+RTS -N1"
-  STACK_ROOT: ${CI_PROJECT_DIR}/.stack
+  RTSOPTS: "+RTS -N1 -s"
+  STACK_ROOT: ${CI_PROJECT_DIR}/.stack-work
 
 build:
+  stage: build
   except:
     - tags
   image:
-    name: frankhjung/haskell:9.2.8
+    name: frankhjung/haskell:9.4.7
     entrypoint: [""]
-  stage: build
   script:
-    - make clean setup check build test bench doc exec
-    - mv $(stack path --local-install-root)/doc/gcd*/ public/
-    - cp -fp .stack-work/benchmark.html public/
+    - make clean check build test bench doc exec
+    - mv $(stack path --local-doc-root)/ public/
+    - mv ${STACK_ROOT}/benchmark.html public/
   artifacts:
     paths:
       - public
   cache:
-    key: ${CI_COMMIT_REF_NAME}-${CI_JOB_NAME}
+    key: ${CI_COMMIT_REF_NAME}
     paths:
-      - .stack
-      - .stack-work
+      - ${STACK_ROOT}
 
 pages:
-  only:
-    refs:
-      - master
-  image: alpine:latest
   stage: deploy
+  rules:
+    - if: '$CI_COMMIT_BRANCH == "master"'
+  image: alpine:latest
   script:
-    - echo Publishing pages ...
+    - echo Publishing documentation ...
   dependencies:
     - build
   artifacts:
