--- a/gcd.cabal
+++ b/gcd.cabal
@@ -1,9 +1,10 @@
 cabal-version:      3.0
-
 name:               gcd
-version:            0.11.0
+version:            0.12.0
 synopsis:           Greatest Common Denominator
-description:        Test versions of Euclid's greatest common denominator algorithm
+description:
+  Test versions of Euclid's greatest common denominator algorithm
+
 homepage:           https://github.com/frankhjung/gcd#readme
 author:             Frank H Jung
 maintainer:         frankhjung@linux.com
@@ -15,19 +16,21 @@ build-type:         Simple
 extra-source-files: README.md
 
 source-repository head
-  type:             git
-  location:         git@github.com:frankhjung/haskell-gcd.git
+  type:     git
+  location: git@github.com:frankhjung/haskell-gcd.git
 
-executable          gcd
-  hs-source-dirs:   app
-                  , src
+executable gcd
+  hs-source-dirs:   app src
   main-is:          Main.hs
   default-language: Haskell2010
-  build-depends:    base >= 4.13 && < 5.0
-                  , gcd
-  other-modules:    Paths_gcd
-                  , Gcd
   autogen-modules:  Paths_gcd
+  build-depends:
+    , base  >=4.13 && <5.0
+    , gcd
+
+  other-modules:
+    Gcd
+    Paths_gcd
 
 library
   hs-source-dirs:   src
@@ -35,24 +38,24 @@ library
   exposed-modules:  Gcd
   build-depends:    base
 
-test-suite          test
-  hs-source-dirs:   test
-                  , src
+test-suite test
+  hs-source-dirs:   test src
   main-is:          Test.hs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  build-depends:    base
-                  , hspec
-                  , gcd
   other-modules:    Gcd
+  build-depends:
+    , base
+    , gcd
+    , hspec
 
-benchmark           benchmark
-  hs-source-dirs:   bench
-                  , src
+benchmark benchmark
+  hs-source-dirs:   bench src
   main-is:          Bench.hs
   default-language: Haskell2010
   type:             exitcode-stdio-1.0
-  build-depends:    base
-                  , criterion
-                  , gcd
   other-modules:    Gcd
+  build-depends:
+    , base
+    , criterion
+    , gcd
