--- a/gcd.cabal
+++ b/gcd.cabal
@@ -1,6 +1,6 @@
 cabal-version:      3.0
 name:               gcd
-version:            0.12.0
+version:            0.12.1
 synopsis:           Greatest Common Denominator
 description:
   Test versions of Euclid's greatest common denominator algorithm
@@ -25,7 +25,7 @@ executable gcd
   default-language: Haskell2010
   autogen-modules:  Paths_gcd
   build-depends:
-    , base  >=4.13 && <5.0
+    , base  ^>=4.17
     , gcd
 
   other-modules:
@@ -48,6 +48,7 @@ test-suite test
     , base
     , gcd
     , hspec
+    , QuickCheck
 
 benchmark benchmark
   hs-source-dirs:   bench src
