--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -14,7 +14,6 @@ build:
     - tags
   image:
     name: frankhjung/haskell:9.4.7
-    entrypoint: [""]
   script:
     - make clean check build test bench doc exec
     - mv $(stack path --local-doc-root)/ public/
@@ -30,7 +29,7 @@ build:
 pages:
   stage: deploy
   rules:
-    - if: '$CI_COMMIT_BRANCH == "master"'
+    - if: '$CI_COMMIT_BRANCH == "main"'
   image: alpine:latest
   script:
     - echo Publishing documentation ...
